<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
            android:id="@+id/question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp" />

    <!--True and False Buttons -->
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
                android:id="@+id/true_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_button" />
        <Button
                android:id="@+id/false_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_button" />
    </LinearLayout>

    <!-- Cheat Button -->
    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"/>
    <!-- Cheats Remaining -->
    <TextView
        android:id="@+id/cheats_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:padding="12dp"
        android:text="@string/cheats_remaining"
        tools:text="Cheats Remaining: x"/>

    <!-- Previous and Next buttons -->
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <ImageButton
                android:id="@+id/prev_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_left"
                android:contentDescription="@string/prev_button_cD"/>
                <!--android:text="@string/prev_button"-->
                <!--android:drawableLeft="@drawable/arrow_left"-->
                <!--android:drawablePadding="4dp" />-->
        <ImageButton
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_right"
                android:contentDescription="@string/next_button_cD"/>
                <!--android:text="@string/next_button"-->
                <!--android:drawableRight="@drawable/arrow_right"-->
                <!--android:drawablePadding="4dp" />-->

    </LinearLayout>
</LinearLayout>